# rustishka

./: README.html  README.md  rustishka.sln
Rustishka.Tests/: Rustishka.Tests.csproj  SharedRustModule.cs  SomeTests.cs  TestDelegates.cs  TestReflection.cs
Rustishka.Tools/: Program.cs  Rustishka.Tools.csproj
RustishkaBridge/: Bridge.cs
rustishka/: Cargo.toml
rustishka/src/: imports.rs  lib.rs
rustishka/src/wrappers/: macros.rs  mod.rs
rustishka/src/wrappers/system/: dynamic_things.rs  gc.rs  marshal.rs  mod.rs  primitives.rs  system_activator.rs  system_appdomain.rs  system_array.rs  system_console.rs  system_delegate.rs  system_dictionary.rs  system_exception.rs  system_ienumerator.rs  system_list.rs  system_reflection.rs  system_runtimehelpers.rs  system_string.rs  system_type.rs
rustishka_examples/: Cargo.toml
rustishka_examples/src/: lib.rs
